--- a/boilerplate-npm/package.json
+++ b/boilerplate-npm/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "fcc-learn-npm-package-json",
-	"author": "Nate",
+	
 	"dependencies": {
 		"express": "^4.14.0"
 	},
@@ -11,6 +11,7 @@
 	"repository": {
 		"type": "git",
 		"url": "https://idontknow/todo.git"
-	}
+	},
+	"author": "Nate"
 	
 }
